Added tests for some methods